basket_api test from cache
Former-commit-id: 9e07a330884e3fe7c2838dde32ef93f2e8afac4f
Former-commit-id: 54e8d1367199cf83580b20cbc4132d45808c0dcb [formerly 75209bb5e56420a5c5a310c4f04d15a6bec31f3a]
Former-commit-id: d7d64b9df6e3e1f5476e9e9514e520f4a173beb9

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -95,12 +95,12 @@ build:basket_api:
 #     - cd src/Server/
 #     - ci/update_build_badge.sh `cat menu_status.txt` menu_api
 
-# test:basket_api:
-#   stage: test
-#   script: 
-#     - ci/test.sh basket_api
-#   dependencies:
-#     - build:basket_api
+test:basket_api:
+  stage: test
+  script: 
+    - ci/test.sh basket_api
+  dependencies:
+    - build:basket_api
 
 # test:identity_api:
 #   stage: test
