xamarin forms project view models changes
Former-commit-id: c8633793773a0adc7021afbc28b6fa389acb2bcf
Former-commit-id: cdc8dd8c388a06f4265a2b27353211eacd590a6b [formerly 828fafd9be87e63f65601be182450e0bf811c1e7]
Former-commit-id: 2acbc8c40a6fb6a67cfae39ae969f10893a5f0a6

--- a/src/Server/docker-compose.yml
+++ b/src/Server/docker-compose.yml
@@ -45,6 +45,7 @@ services:
   order-api:
     image: restaurant/order
     build: ./services/order.api
+    dockerfile: Dockerfile.local
     ports:
       - "8090:8090"
     depends_on:
@@ -54,5 +55,5 @@ services:
   pgsql:
     image: postgres:alpine
   
-  # redis:
-  #   image: redis:alpine
+  redis:
+    image: redis:alpine
