--- a/src/Server/gateway/restaurant-gateway/Dockerfile.local
+++ b/src/Server/gateway/restaurant-gateway/Dockerfile.local
@@ -3,7 +3,7 @@ FROM openjdk:8-jdk-alpine as builder
 COPY . /usr/src/gateway
 WORKDIR /usr/src/gateway
 
-RUN ./gradlew build -x test
+RUN ./gradlew build
 
 FROM openjdk:8-jdk-alpine
 COPY --from=builder /usr/src/gateway/build/libs/restaurant-gateway-0.0.1.jar gateway.jar
