--- a/src/Server/gateway/restaurant-gateway/src/main/resources/application.yml
+++ b/src/Server/gateway/restaurant-gateway/src/main/resources/application.yml
@@ -22,6 +22,12 @@ zuul:
     order:
       path: /order/**
       serviceId: order-service
+    identity:
+      path: /identity/**
+      serviceId: identity-service
+    basket:
+      path: /basket/**
+      serviceId: basket-service
 
 eureka:
   client:
