--- a/src/Server/services/order.api/build.gradle
+++ b/src/Server/services/order.api/build.gradle
@@ -7,6 +7,7 @@ buildscript {
 	}
 	dependencies {
 		classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
+		classpath('com.github.ksoichiro:gradle-console-reporter:0.6.2')
 	}
 }
 
@@ -15,9 +16,18 @@ apply plugin: 'eclipse'
 apply plugin: 'org.springframework.boot'
 apply plugin: 'io.spring.dependency-management'
 apply plugin: 'jacoco'
+apply plugin: 'com.github.ksoichiro.console.reporter'
 
 group = 'com.jurabek.restaurant'
 sourceCompatibility = 1.8
+
+
+jacocoTestReport {
+    reports {
+        csv.enabled true
+        html.enabled true
+    }
+}
 
 // task testJar(type: Jar) {
 // 	zip64 = true
@@ -35,6 +45,7 @@ sourceCompatibility = 1.8
 // artifacts {
 //     archives testJar
 // }
+
 repositories {
 	mavenCentral()
 }
