--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -105,16 +105,20 @@ build:order_api:
 #     - cd src/Server/
 #     - ci/update_build_badge.sh `cat identity_status.txt` identity_api
 
-# build:menu_api:
-#   stage: build
-#   script:
-#     - ci/update_build_badge.sh running menu_api
-#     - echo "failure" > menu_status.txt
-#     - ci/build.sh menu_api
-#     - echo "success" > menu_status.txt
-#   after_script:
-#     - cd src/Server/
-#     - ci/update_build_badge.sh `cat menu_status.txt` menu_api
+build:menu_api:
+  stage: build
+  script:
+    - ci/update_build_badge.sh running menu_api
+    - echo "failure" > menu_status.txt
+    - ci/build.sh menu_api
+    - echo "success" > menu_status.txt
+  after_script:
+    - cd src/Server/
+    - ci/update_build_badge.sh `cat menu_status.txt` menu_api
+  cache:
+    key: dotnet-cache
+    paths:
+      - .nuget/
 
 test:basket_api:
   image: golang:1.11-alpine
@@ -128,7 +132,6 @@ test:basket_api:
     paths:
       - go
 
-
 # test:identity_api:
 #   stage: test
 #   script: 
@@ -136,12 +139,16 @@ test:basket_api:
 #   dependencies:
 #     - build:identity_api
 
-# test:menu_api:
-#   stage: test
-#   script:
-#     - ci/test.sh menu_api
-#   dependencies:
-#     - build:menu_api
+test:menu_api:
+  stage: test
+  script:
+    - ci/test.sh menu_api
+  dependencies:
+    - build:menu_api
+  cache:
+    key: dotnet-cache
+    paths:
+      - .nuget/
 
 test:order_api:
   image: openjdk:8-jdk-alpine
