--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -94,16 +94,16 @@ build:order_api:
      - .gradle/wrapper
      - .gradle/caches
 
-# build:identity_api:
-#   stage: build
-#   script:
-#     - ci/update_build_badge.sh running identity_api
-#     - echo "failure" > identity_status.txt
-#     - ci/build.sh identity_api
-#     - echo "success" > identity_status.txt
-#   after_script:
-#     - cd src/Server/
-#     - ci/update_build_badge.sh `cat identity_status.txt` identity_api
+build:identity_api:
+  stage: build
+  script:
+    - ci/update_build_badge.sh running identity_api
+    - echo "failure" > identity_status.txt
+    - ci/build.sh identity_api
+    - echo "success" > identity_status.txt
+  after_script:
+    - cd src/Server/
+    - ci/update_build_badge.sh `cat identity_status.txt` identity_api
 
 build:menu_api:
   image: microsoft/dotnet:2.1-sdk-alpine
