identity api build removed
Former-commit-id: b704def95c4e52badc13711d1b5f41ac6c66fffd
Former-commit-id: 5bf60a615d178edae25b21389f52cd266250c931 [formerly 893cff7b5ce387b0eaa956cd160a05659d1f4bb8]
Former-commit-id: 85df33d598fc3d561f748cc274b308ffcc8342b6

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -28,14 +28,6 @@ before_script:
   - cd src/Server/
   - chmod -R +x ci/
 
-# cache:
-#   key: "$CI_PROJECT_NAME"
-#   paths:
-   
-#     - .nuget/
-#     - pip_cache/
-   
-
 build:gateway_api:
   stage: build
   image: openjdk:8-jdk-alpine
@@ -94,16 +86,16 @@ build:order_api:
      - .gradle/wrapper
      - .gradle/caches
 
-build:identity_api:
-  stage: build
-  script:
-    - ci/update_build_badge.sh running identity_api
-    - echo "failure" > identity_status.txt
-    - ci/build.sh identity_api
-    - echo "success" > identity_status.txt
-  after_script:
-    - cd src/Server/
-    - ci/update_build_badge.sh `cat identity_status.txt` identity_api
+# build:identity_api:
+#   stage: build
+#   script:
+#     - ci/update_build_badge.sh running identity_api
+#     - echo "failure" > identity_status.txt
+#     - ci/build.sh identity_api
+#     - echo "success" > identity_status.txt
+#   after_script:
+#     - cd src/Server/
+#     - ci/update_build_badge.sh `cat identity_status.txt` identity_api
 
 build:menu_api:
   image: microsoft/dotnet:2.1-sdk-alpine
