identity api build
Former-commit-id: a06b02e9113539d877ff47e543883ec35a30a24b
Former-commit-id: 2f577cb0c9fa2c7277fd89344861e1bc840e28ee [formerly a5483762ddc17528de0fcd9410596665ee83c032]
Former-commit-id: 8af73a8d1ebb816ab6cd6847a27004effa98f989

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -38,6 +38,7 @@ build:gateway_api:
     paths:
      - .gradle/wrapper
      - .gradle/caches
+    policy: pull
 
 build:service_discovery:
   stage: build
@@ -49,7 +50,8 @@ build:service_discovery:
     paths:
      - .gradle/wrapper
      - .gradle/caches
-
+    policy: pull
+    
 build:basket_api:
   image: golang:1.11-alpine
   stage: build
@@ -86,16 +88,21 @@ build:order_api:
      - .gradle/wrapper
      - .gradle/caches
 
-# build:identity_api:
-#   stage: build
-#   script:
-#     - ci/update_build_badge.sh running identity_api
-#     - echo "failure" > identity_status.txt
-#     - ci/build.sh identity_api
-#     - echo "success" > identity_status.txt
-#   after_script:
-#     - cd src/Server/
-#     - ci/update_build_badge.sh `cat identity_status.txt` identity_api
+build:identity_api:
+  image: microsoft/dotnet:2.1-sdk-alpine
+  stage: build
+  script:
+    - ci/update_build_badge.sh running identity_api
+    - echo "failure" > identity_status.txt
+    - ci/build.sh identity_api
+    - echo "success" > identity_status.txt
+  after_script:
+    - cd src/Server/
+    - ci/update_build_badge.sh `cat identity_status.txt` identity_api
+  cache:
+    key: dotnet-cache
+    paths:
+      - .nuget/
 
 build:menu_api:
   image: microsoft/dotnet:2.1-sdk-alpine
