order api unit tests
Former-commit-id: 1d48a81dfa9ce517bb1e25a5268a0cc3efccfdfc
Former-commit-id: 55285f1f5c192622dacd4577c9458450e0f4d276 [formerly 4f1904929d07dae64759f6b7964bcb66bc022b32]
Former-commit-id: 2e20c32d0ed438663b883895003c5c1441d4e011

--- a/src/Server/services/order.api/build.gradle
+++ b/src/Server/services/order.api/build.gradle
@@ -1,14 +1,14 @@
 buildscript {
-	ext {
-		springBootVersion = '2.0.4.RELEASE'
-	}
-	repositories {
-		mavenCentral()
-	}
-	dependencies {
-		classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
-		classpath('com.github.ksoichiro:gradle-console-reporter:0.6.2')
-	}
+    ext {
+        springBootVersion = '2.0.4.RELEASE'
+    }
+    repositories {
+        mavenCentral()
+    }
+    dependencies {
+        classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
+        classpath('com.github.ksoichiro:gradle-console-reporter:0.6.2')
+    }
 }
 
 apply plugin: 'java'
@@ -27,43 +27,36 @@ jacocoTestReport {
         csv.enabled true
         html.enabled true
     }
+
+    afterEvaluate {
+        classDirectories = files(classDirectories.files.collect {
+            fileTree(dir: it,
+                    exclude: ['com/jurabek/restaurant/order/api/config/**',
+                              '**/mappers/**',
+                              'com/jurabek/restaurant/order/api/controllers/HomeController.java']
+            )
+        })
+    }
 }
 
-// task testJar(type: Jar) {
-// 	zip64 = true
-//     classifier = 'tests'
-// 	manifest {
-//     	attributes ('Main-Class': 'com.jurabek.restaurant.order.api.ApplicationTests')
-//   	}
-//     from sourceSets.test.output
-// 	from { configurations.testRuntime.collect { it.isDirectory() ? it : zipTree(it) } }
-//   	with jar
-// }
-
-// testJar.dependsOn 'test'
-
-// artifacts {
-//     archives testJar
-// }
-
 repositories {
-	mavenCentral()
+    mavenCentral()
 }
 
 dependencies {
-	compile('org.springframework.cloud:spring-cloud-starter-netflix-eureka-client')
-	compile('org.springframework.boot:spring-boot-starter-data-jpa')
-	compile('org.springframework.boot:spring-boot-starter-web')
-	compile('org.postgresql:postgresql:42.2.5')
-	compile('io.springfox:springfox-swagger2:2.9.2')
-	compile('io.springfox:springfox-swagger-ui:2.9.2')
-	compile('org.modelmapper:modelmapper:2.3.0')
-	testCompile('org.springframework.boot:spring-boot-starter-test')
-	testCompile('org.mockito:mockito-core:2.+')
+    compile('org.springframework.cloud:spring-cloud-starter-netflix-eureka-client')
+    compile('org.springframework.boot:spring-boot-starter-data-jpa')
+    compile('org.springframework.boot:spring-boot-starter-web')
+    compile('org.postgresql:postgresql:42.2.5')
+    compile('io.springfox:springfox-swagger2:2.9.2')
+    compile('io.springfox:springfox-swagger-ui:2.9.2')
+    compile('org.modelmapper:modelmapper:2.3.0')
+    testCompile('org.springframework.boot:spring-boot-starter-test')
+    testCompile('org.mockito:mockito-core:2.+')
 }
 
 dependencyManagement {
-	imports {
-		mavenBom 'org.springframework.cloud:spring-cloud-dependencies:Finchley.SR2'
-	}
+    imports {
+        mavenBom 'org.springframework.cloud:spring-cloud-dependencies:Finchley.SR2'
+    }
 }
