--- a/src/Server/services/order.api/gradle/wrapper/gradle-wrapper.properties
+++ b/src/Server/services/order.api/gradle/wrapper/gradle-wrapper.properties
@@ -1,6 +1,6 @@
-#Tue Feb 06 12:27:20 CET 2018
+#Sat Mar 23 18:36:09 CET 2019
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
 zipStorePath=wrapper/dists
-distributionUrl=https\://services.gradle.org/distributions/gradle-4.8.1-bin.zip
+distributionUrl=https\://services.gradle.org/distributions/gradle-4.8.1-all.zip
