fixed issue #30: Dockerfile error Identity API migrated to .net core 2.2, basket-api test fails fixed due to report folder removed order-api added initial integration test
Former-commit-id: c841b58ecc638a57c237e9a0af27ceb2ed9c963d
Former-commit-id: 307bb5fe5f2e571fbb568dfe2afdeaaa6f672e8c [formerly b13d64ed3a25dcd84921788ea56aae1f5a869efe]
Former-commit-id: 75b78c3652998701802270c73103dfd3d2eef919

--- a/src/Server/docker-compose.yml
+++ b/src/Server/docker-compose.yml
@@ -30,7 +30,9 @@ services:
 
   menu-api:
     image: restaurant/menu
-    build: ./services/menu.api/
+    build: 
+      context: ./services/menu.api/
+      dockerfile: Dockerfile.local
     ports:
        - "5100:80"
     depends_on:
