#30 Docker file issue
Former-commit-id: fbf8d98ae82330e84724be61fcece19fe015e28b
Former-commit-id: 773057e46d16494d5711359fd1849bea29bd07ea [formerly 43953cb4d20584dc369a8bb2317d7bb96d23dfff]
Former-commit-id: 966002958ada03a0987627bb5d2c4aad1c58cf8b

--- a/src/Server/services/identity.api/Dockerfile
+++ b/src/Server/services/identity.api/Dockerfile
@@ -1,5 +1,5 @@
 
-FROM microsoft/dotnet:2.2-sdk AS build
+FROM microsoft/dotnet:2.2-sdk-alpine AS build
 WORKDIR /src
 COPY Identity.API/ ./api
 COPY Identity.API.UnitTests/ ./test
