basket_api coverage badge
Former-commit-id: 7e1a3e8a01cb5dc174840662a6c43002a8a099ed
Former-commit-id: 0cabc0e59097dee4ba9523069a64272aea4f6f3e [formerly a7fa171dca4edfe7d94425b0d77eec00deae113f]
Former-commit-id: f9301ab5c8aa10a76a81ef619b19d0c20acb2da6

--- a/src/Server/services/identity.api/Identity.API/appsettings.Development.json
+++ b/src/Server/services/identity.api/Identity.API/appsettings.Development.json
@@ -1,5 +1,6 @@
 {
-
+  "Profile" : "local",
+  
   "ConnectionStrings": {
     "IdentityConnectionString": "Host=localhost;Database=identity_database;Username=jurabek;"
   },
