--- a/src/Server/services/identity.api/Identity.API/appsettings.json
+++ b/src/Server/services/identity.api/Identity.API/appsettings.json
@@ -1,4 +1,5 @@
 {
+  "Profile" : "gateway",
 
   "ConnectionStrings": {
     "IdentityConnectionString": "Host=localhost;Database=identity_database;Username=jurabek;"
