Identity API changes and identity.api tests are added to pipeline
Former-commit-id: c7a8361554dcdb07fdf6681f1c73072af500e233
Former-commit-id: c87a3f8048d9344aa92dbb25bdb9fec4251cc074 [formerly ad2132224d4a3b3729ce017825ceaa7ee50c3196]
Former-commit-id: bc3323977cb95f430743ce4409ab721819d7debd

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -60,10 +60,8 @@ build:basket_api:
     - echo "failure" > basket_status.txt #https://gitlab.com/gitlab-org/gitlab-runner/issues/3088
     - ci/build.sh basket_api
     - echo "success" > basket_status.txt
-    - export BASKET_STATUS=success
   after_script:
     - echo "Printing basket status from export"
-    - echo $BASKET_STATUS
     - cd src/Server/
     - ci/update_build_badge.sh `cat basket_status.txt` basket_api
   cache:
@@ -133,12 +131,18 @@ test:basket_api:
     paths:
       - go
 
-# test:identity_api:
-#   stage: test
-#   script: 
-#     - ci/test.sh identity_api
-#   dependencies:
-#     - build:identity_api
+test:identity_api:
+  image: microsoft/dotnet:2.2-sdk-alpine
+  stage: test
+  script: 
+    - ci/test.sh identity_api
+  dependencies:
+    - build:identity_api
+  cache:
+    key: dotnet-cache
+    policy: pull
+    paths:
+      - .nuget/
 
 test:menu_api:
   image: microsoft/dotnet:2.1-sdk-alpine
