swagger Auth for serices
Former-commit-id: b03059e360ca8629e4d3bdf0e2fb121978afbe61
Former-commit-id: 62479a541e0cabf9adc72c9ee52805656dae4380 [formerly f6331aef8c61abc29a92ed691241c900c3a89b32]
Former-commit-id: 715585c2645370c88601db880d29e4bf378710af

--- a/src/Server/docker-compose.override.yml
+++ b/src/Server/docker-compose.override.yml
@@ -11,11 +11,13 @@ services:
       - SPRING_DATASOURCE_URL=jdbc:postgresql://pgsql:5432/orderdb
       - SPRING_DATASOURCE_USERNAME=admin
       - SPRING_DATASOURCE_PASSWORD=Passw0rd!
-  
+      - IdentityUrl=http://localhost:8080/identity
+
   basket-api:
     environment:
-      - EUREKA_CLIENT_SERVICE_URL=http://service-discovery:8761/eureka/
+      - EUREKA_CLIENT_SERVICE_URL=http://service-discovery:8761/eureka
       - REDIS_HOST=redis
+      - IdentityUrl=http://localhost:8080/identity
   
   pgsql:
     environment:
@@ -30,6 +32,8 @@ services:
       - ConnectionStrings__MenuDatabaseConnectionString=Host=pgsql;Database=menu_database;Username=admin;Password=Passw0rd!
       - eureka__client__serviceUrl=http://service-discovery:8761/eureka/
       - eureka__instance__port=80
+      - PATH_BASE=/menu
+      - IdentityUrl=http://localhost:8080/identity
   
   identity-api:
     environment:
@@ -37,3 +41,5 @@ services:
       - ConnectionStrings__IdentityConnectionString=Host=pgsql;Database=identity_database;Username=admin;Password=Passw0rd!
       - eureka__client__serviceUrl=http://service-discovery:8761/eureka/
       - eureka__instance__port=80
+      - PATH_BASE=/identity
+      - MENU_API_URL=http://localhost:8080/menu
