--- a/src/Server/services/identity.api/Identity.API/appsettings.Development.json
+++ b/src/Server/services/identity.api/Identity.API/appsettings.Development.json
@@ -1,13 +1,18 @@
-{
-  "Profile" : "local",
-  
+{ 
+  "MENU_API_URL": "http://localhost:5100",
+  "BASKET_API_URL" : "http://localhost:5050",
   "ConnectionStrings": {
     "IdentityConnectionString": "Host=localhost;Database=identity_database;Username=jurabek;"
   },
 
   "Logging": {
+    "IncludeScopes": false,
     "LogLevel": {
-      "Default": "Warning"
+      "Default": "Debug",
+      "System": "Information",
+      "Microsoft": "Information",
+      "Pivotal": "Debug",
+      "Steeltoe": "Debug"
     }
   },
   "AllowedHosts": "*",
