--- a/src/Server/services/identity.api/Identity.API/appsettings.json
+++ b/src/Server/services/identity.api/Identity.API/appsettings.json
@@ -1,15 +1,12 @@
 {
-  "Profile" : "local",
+  "MENU_API_URL": "http://localhost:5100",
+  "BASKET_API_URL" : "http://localhost:5050",
 
   "ConnectionStrings": {
     "IdentityConnectionString": "Host=localhost;Database=identity_database;Username=jurabek;"
   },
 
-  "Logging": {
-    "LogLevel": {
-      "Default": "Warning"
-    }
-  },
+  
   "AllowedHosts": "*",
   "UserSettings": {
     "AdminUserName": "admin",
