--- a/src/Server/services/menu.api/Menu.API/Menu.API.csproj
+++ b/src/Server/services/menu.api/Menu.API/Menu.API.csproj
@@ -14,5 +14,6 @@
     <PackageReference Include="IdentityServer4.AccessTokenValidation" Version="2.3.0" />
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="2.1.1.1" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="3.0.0" />
+    <PackageReference Include="Swashbuckle.AspNetCore.Filters" Version="4.5.5" />
   </ItemGroup>
 </Project>
