--- a/src/Server/services/menu.api/Menu.API/appsettings.json
+++ b/src/Server/services/menu.api/Menu.API/appsettings.json
@@ -6,11 +6,7 @@
   "Logging": {
     "IncludeScopes": false,
     "LogLevel": {
-      "Default": "Debug",
-      "System": "Information",
-      "Microsoft": "Information",
-      "Pivotal": "Debug",
-      "Steeltoe": "Debug"
+      "System": "Information"
     }
   },
   "AllowedHosts": "*",
