identity server improvements
Former-commit-id: a3c1f349565f66c203f8193a4bee73357a4328d8
Former-commit-id: 595cb9416a0e0707ef29031e62d35ca12b666f65 [formerly 6d045c705250fc383de2ea03f3853786b6f2d977]
Former-commit-id: 7c6985321a73949c141b660f2e6b8b1e70b7bfea

--- a/src/Server/docker-compose.override.yml
+++ b/src/Server/docker-compose.override.yml
@@ -43,3 +43,5 @@ services:
       - eureka__instance__port=80
       - PATH_BASE=/identity
       - MENU_API_URL=http://localhost:8080/menu
+      - ORDER_API_URL=http://localhost:8080/order
+      - BASKET_API_URL=http://localhost:8080/basket,
