--- a/src/Server/services/identity.api/Identity.API/appsettings.json
+++ b/src/Server/services/identity.api/Identity.API/appsettings.json
@@ -1,6 +1,7 @@
 {
   "MENU_API_URL": "http://localhost:5100",
   "BASKET_API_URL" : "http://localhost:5050",
+  "ORDER_API_URL" : "http://localhost:8090",
 
   "ConnectionStrings": {
     "IdentityConnectionString": "Host=localhost;Database=identity_database;Username=jurabek;"
