--- a/src/Server/web/web.admin/dashboard/package.json
+++ b/src/Server/web/web.admin/dashboard/package.json
@@ -24,6 +24,7 @@
     "@angular/router": "^7.2.3",
     "@types/uuid": "^3.4.4",
     "core-js": "^2.5.4",
+    "mat-progress-buttons": "^8.0.4",
     "rxjs": "^6.4.0",
     "tslib": "^1.9.0",
     "uuid": "^3.3.2",
