--- a/src/Server/docker-compose.yml
+++ b/src/Server/docker-compose.yml
@@ -59,6 +59,15 @@ services:
 
   pgsql:
     image: postgres:alpine
+    # volumes: 
+    #   - database-data:/var/lib/postgresql/data
   
   redis:
     image: redis:alpine
+    
+    
+    # volumes: 
+    # - cache-data:/data
+ 
+  # volumes:
+  #   database-data:
