spring projects moved into gradle docker image
Former-commit-id: 95f2e3ed1a936cb5cc9f9cc409ef110098678b77
Former-commit-id: 1ce1424dd2163b2a5fc42a8c023652da5e9b7ea5 [formerly db5e130f3e66144dfd2eaad83e9bb1712ec0cd87]
Former-commit-id: a429a07467f01e1120ea72012b9fc6a565fe31ea

--- a/src/Server/gateway/restaurant-service-discovery/Dockerfile.local
+++ b/src/Server/gateway/restaurant-service-discovery/Dockerfile.local
@@ -1,9 +1,12 @@
-FROM openjdk:8-jdk-alpine as builder
+FROM gradle:4.8-jdk8 as builder
 
 COPY . /usr/src/discovery
+USER root
+RUN chown -R gradle:gradle /usr/src/discovery
+USER gradle
 WORKDIR /usr/src/discovery
 
-RUN ./gradlew build
+RUN gradle build
 
 FROM java:alpine
 COPY --from=builder /usr/src/discovery/build/libs/restaurant-service-discovery-0.0.1-SNAPSHOT.jar service-discovery.jar
