--- a/src/Server/gateway/restaurant-gateway/Dockerfile.local
+++ b/src/Server/gateway/restaurant-gateway/Dockerfile.local
@@ -1,9 +1,12 @@
-FROM openjdk:8-jdk-alpine as builder
+FROM gradle:4.8-jdk8 as builder
 
 COPY . /usr/src/gateway
+USER root
+RUN chown -R gradle:gradle /usr/src/gateway
+USER gradle
 WORKDIR /usr/src/gateway
 
-RUN ./gradlew build
+RUN gradle build
 
 FROM openjdk:8-jdk-alpine
 COPY --from=builder /usr/src/gateway/build/libs/restaurant-gateway-0.0.1.jar gateway.jar
