IdentityServer4 behind the Zuul proxy
Former-commit-id: be5684c0b9b44e159793c6f9c8a86b2a64820648
Former-commit-id: 1280fe7b92e27e71e7e73e7dd3c135cc4eab0074 [formerly ffdfd8d440e04be6de1faf3ae18303fe3d212a0e]
Former-commit-id: a1c9530d2df9c3f1cbc78ef0281973a29fb99e40

--- a/src/Server/docker-compose.override.yml
+++ b/src/Server/docker-compose.override.yml
@@ -11,13 +11,13 @@ services:
       - SPRING_DATASOURCE_URL=jdbc:postgresql://pgsql:5432/orderdb
       - SPRING_DATASOURCE_USERNAME=admin
       - SPRING_DATASOURCE_PASSWORD=Passw0rd!
-      - IdentityUrl=http://localhost:8080/identity
+      - ExternalIdentityUrl=http://localhost:8080/identity
 
   basket-api:
     environment:
       - EUREKA_CLIENT_SERVICE_URL=http://service-discovery:8761/eureka
       - REDIS_HOST=redis
-      - IdentityUrl=http://localhost:8080/identity
+      - ExternalIdentityUrl=http://localhost:8080/identity
   
   pgsql:
     environment:
@@ -33,7 +33,7 @@ services:
       - eureka__client__serviceUrl=http://service-discovery:8761/eureka/
       - eureka__instance__port=80
       - PATH_BASE=/menu
-      - IdentityUrl=http://localhost:8080/identity
+      - ExternalIdentityUrl=http://localhost:8080/identity
   
   identity-api:
     environment:
@@ -44,4 +44,5 @@ services:
       - PATH_BASE=/identity
       - MENU_API_URL=http://localhost:8080/menu
       - ORDER_API_URL=http://localhost:8080/order
-      - BASKET_API_URL=http://localhost:8080/basket,
+      - BASKET_API_URL=http://localhost:8080/basket
+      - ExternalIdentityUrl=http://localhost:8080/identity
