--- a/src/Server/services/menu.api/Menu.API/appsettings.Development.json
+++ b/src/Server/services/menu.api/Menu.API/appsettings.Development.json
@@ -1,5 +1,5 @@
 {
-  "IdentityUrl": "http://localhost:5000",
+  "ExternalIdentityUrl": "http://localhost:8080/identity",
   "ConnectionStrings": {
     "MenuDatabaseConnectionString": "Host=localhost;Database=restaurant_menu_database;Username=jurabek;"
   },
@@ -28,7 +28,7 @@
       "ValidateCertificates":  false
     },
     "instance": {
-      "port": 5000
+      "port": 5100
     }
   }
 }
