--- a/src/Server/services/identity.api/Identity.API/appsettings.Development.json
+++ b/src/Server/services/identity.api/Identity.API/appsettings.Development.json
@@ -2,7 +2,6 @@
   "MENU_API_URL": "http://localhost:5100",
   "BASKET_API_URL" : "http://localhost:5050",
   "ORDER_API_URL" : "http://localhost:8090",
-  
   "ConnectionStrings": {
     "IdentityConnectionString": "Host=localhost;Database=identity_database;Username=jurabek;"
   },
@@ -10,11 +9,9 @@
   "Logging": {
     "IncludeScopes": false,
     "LogLevel": {
-      "Default": "Debug",
-      "System": "Information",
-      "Microsoft": "Information",
-      "Pivotal": "Debug",
-      "Steeltoe": "Debug"
+      "Default": "Trace",
+      "System": "Trace",
+      "Microsoft": "Trace"
     }
   },
   "AllowedHosts": "*",
