--- a/src/Server/services/menu.api/Menu.API/appsettings.json
+++ b/src/Server/services/menu.api/Menu.API/appsettings.json
@@ -1,5 +1,5 @@
 {
-  "IdentityUrl": "http://localhost:5000",
+  "ExternalIdentityUrl": "http://localhost:5000",
   "ConnectionStrings": {
     "MenuDatabaseConnectionString": "Host=localhost;Database=restaurant_menu_database;Username=jurabek;"
   },
