--- a/src/Server/gateway/restaurant-gateway/src/main/resources/application.yml
+++ b/src/Server/gateway/restaurant-gateway/src/main/resources/application.yml
@@ -20,6 +20,7 @@ zuul:
     menu:
       path: /menu/**
       serviceId: menu-service
+      sensitiveHeaders:
     order:
       path: /order/**
       serviceId: order-service
