--- a/src/Server/services/order.api/build.gradle
+++ b/src/Server/services/order.api/build.gradle
@@ -44,9 +44,11 @@ repositories {
 }
 
 dependencies {
-    compile('org.springframework.cloud:spring-cloud-starter-netflix-eureka-client')
     compile('org.springframework.boot:spring-boot-starter-data-jpa')
     compile('org.springframework.boot:spring-boot-starter-web')
+    compile('org.springframework.cloud:spring-cloud-starter-netflix-eureka-client')
+    compile('com.auth0:auth0-spring-security-api:1.1.0')
+    compile('com.auth0:jwks-rsa:0.8.2')
     compile('org.postgresql:postgresql:42.2.5')
     compile('io.springfox:springfox-swagger2:2.9.2')
     compile('io.springfox:springfox-swagger-ui:2.9.2')
