--- a/src/Server/services/order.api/src/main/resources/application.properties
+++ b/src/Server/services/order.api/src/main/resources/application.properties
@@ -10,3 +10,6 @@ spring.datasource.password=
 spring.application.name=order-service
 
 eureka.client.serviceUrl.defaultZone=http://${registry.host:localhost}:${registry.port:8761}/eureka/
+eureka.client.enabled=true
+
+jwt.apiAudience=order-api
